1. Fixing bug with different sized models overlapping when using keyboard 2. Fixing bug with events within the sortable-item is triggering keyboard reorder mode operations

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -211,3 +211,7 @@
   left: calc(100% + 10px);
   border-left-color: #000;
 }
+
+.word-break {
+  word-wrap: break-word;
+}
